// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrcidProfileLink renders with all props set 1`] = `
<EventTracker
  eventAction="Link"
  eventCategory="Author detail"
  eventId="Orcid link"
  eventPropName="onClick"
  extractEventArgsToForward={null}
>
  <LinkWithTargetBlank
    as="a"
    className="test"
    href="//orcid.org/0000-0001-8058-0014"
  >
    Orcid: 
    <strong>
      0000-0001-8058-0014
    </strong>
  </LinkWithTargetBlank>
</EventTracker>
`;

exports[`OrcidProfileLink renders with only orcid 1`] = `
<EventTracker
  eventAction="Link"
  eventCategory="Author detail"
  eventId="Orcid link"
  eventPropName="onClick"
  extractEventArgsToForward={null}
>
  <LinkWithTargetBlank
    as="a"
    href="//orcid.org/0000-0001-8058-0014"
  >
    0000-0001-8058-0014
  </LinkWithTargetBlank>
</EventTracker>
`;
